--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "daisyui": "^2.39.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -15,6 +16,8 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
+    "eslint": "^8.27.0",
+    "eslint-config-next": "^13.0.3",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
