--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "daisyui": "^2.39.0",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/react-redux": "^7.1.24",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.27.0",
     "eslint-config-next": "^13.0.3",
