--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   },
   "plugins": ["@typescript-eslint", "react-hooks"],
   "extends": [
+    "next/core-web-vitals",
     "eslint:recommended",
     "plugin:react/recommended",
     "plugin:react/jsx-runtime",
