--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "redux-saga": "^1.2.1"
+    "redux-saga": "^1.2.1",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.0.3",
