--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.6.1",
     "@reduxjs/toolkit": "^1.9.0",
     "daisyui": "^2.41.0",
     "next": "latest",
+    "next-auth": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
@@ -32,7 +35,9 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.19",
+    "prisma": "^4.6.1",
     "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.3"
   }
 }
