change prisma provider

--- a/.env.local.example
+++ b/.env.local.example
@@ -8,4 +8,7 @@ AUTH0_ISSUER=
 GITHUB_ID=
 GITHUB_SECRET=
 
-DATABASE_URL=file:./dev.db
+# if you want to use the sqlite database
+# plese modify the prisma/schema.prisma manually
+# change postgres of provider to sqlite
+DATABASE_URL='postgresql://postgres@localhost:5432'
