use pusher replace socket.io

--- a/.env.local.example
+++ b/.env.local.example
@@ -8,8 +8,15 @@ AUTH0_ISSUER=
 GITHUB_ID=
 GITHUB_SECRET=
 
+# https://vercel.com/guides/do-vercel-serverless-functions-support-websocket-connections
+# Pusher Setting https://pusher.com/
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=
 
-# if you want to use the sqlite database
+# https://vercel.com/guides/is-sqlite-supported-in-vercel
+# if you want to use the sqlite database (no support for sqlite in vercel)
 # plese modify the prisma/schema.prisma manually
 # change postgres of provider to sqlite
 DATABASE_URL='postgresql://postgres@localhost:5432'
