--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "daisyui": "^2.41.0",
     "next": "latest",
     "next-auth": "latest",
+    "pusher": "5.1.1-beta",
+    "pusher-js": "^7.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "redux-saga": "^1.2.1",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.0.3",
