--- a/package.json
+++ b/package.json
@@ -8,34 +8,34 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.6.1",
-    "@reduxjs/toolkit": "^1.9.0",
-    "daisyui": "^2.41.0",
-    "next": "latest",
-    "next-auth": "latest",
+    "@prisma/client": "^4.9.0",
+    "@reduxjs/toolkit": "^1.9.2",
+    "daisyui": "^2.49.0",
+    "next": "^13.1.6",
+    "next-auth": "^4.19.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "redux-saga": "^1.2.1",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "redux-saga": "^1.2.2",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.0.3",
+    "@next/eslint-plugin-next": "^13.1.6",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "@types/react-redux": "^7.1.24",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@types/react-redux": "^7.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.27.0",
-    "eslint-config-next": "^13.0.3",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "^13.1.6",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.19",
-    "prisma": "^4.6.1",
+    "postcss": "^8.4.21",
+    "prisma": "^4.9.0",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "4.9.3"
